--- a/profile/profile.yaml
+++ b/profile/profile.yaml
@@ -50,7 +50,16 @@ jarvis_projects:
     git_url: "/linux_sql"
     # The project description allows hiring managers to understand your project and technologies you used(e.g. programming languages, libraries, algorithms, hardware, tools, etc.).
     # The project description must start with an action verb (https://bit.ly/3guO98u)
-    description: Suspendisse a tincidunt odio. Suspendisse posuere luctus aliquet. Quisque magna tellus, tempor vitae arcu sed, volutpat scelerisque lacus. Aliquam varius pulvinar dapibus. Ut a tincidunt sem. Aenean sollicitudin fringilla erat ut imperdiet. Phasellus fermentum, enim vitae laoreet elementum, eros nisl hendrerit lorem.
+    description: Developed a Linux monitoring agent to gather a server hardware specifications and resource usage data and store the data in a database. Designed the application to permit an Administrator to have a knowledge of a Linux server hardware and keep track of ongoing Linux server resource usage data. Utilized bash scripts which is executed continuously with crontab command to collect usage data and store the data in the PostgreSQL instance in the docker container.
+
+  - name: "Database Manipulation"
+    git_url: "/sql"
+    # The project description allows hiring managers to understand your project and technologies you used(e.g. programming languages, libraries, algorithms, hardware, tools, etc.).
+    # The project description must start with an action verb (https://bit.ly/3guO98u)
+    description: To have an in-depth understanding of relational databases, RDMS, SQL, ERD, Data models and optimizations, I familiarized myself with these concepts in SQL with hands-on work on a dataset.
+     Implemented DBeaver as the SQL client to perform several DDL and DML operations.
+     Used several technologies such as Docker to manage the PSQL instance, PostgreSQL database to store the data, and Git & GitHub to manage and track source code.
+
   - name: "Core Java Apps"
     git_url: "/core_java"
     description:
