--- a/profile/profile.yaml
+++ b/profile/profile.yaml
@@ -5,14 +5,14 @@ github_repo_root_url: https://github.com/Jarvis-Consulting-Group/jarvis_data_eng
 
 # Introduce yourself, your academic and professional background.
 # What excites you about the software industry and your passion. At least 80 words
-summary: I am a graduate of Humber College with a Post Graduate Degree in Information Technology Solutions. During my
-  program, I worked on several projects as a group and individually with several tech stacks. I had the
-  opportunity to work with a financial services company as a full stack developer focused on MERN stack technologies and
-  collaborated with team members to build a SaaS software. I was responsible for writing several Rest APIs and
-  implementing APIs on the front-end. From my experience, I have demonstrated problem-solving skills
-  and implemented optimized solutions to challenges. I am a Developer at Jarvis where i'm tasked on challenging
-  projects to improve my skills and broaden my knowledge. In my spare time, I like to read books and learn new things. I am looking to challenge myself and interested in positions where I can implement my creativity to solve
-  problems.
+summary: I am a FullStack developer with a Post Graduate Degree in Information Technology Solutions from Humber College.
+  I have worked on a variety of projects throughout my academics and professional career, including web applications.
+  I am skilled in a variety of development frameworks, such as ReactJS and NodeJS, and I have expertise with a variety of programming languages, such as Java and JavaScript.
+  As a Full Stack Developer, I am passionate about applying my technical knowledge to deliver high-quality software solutions and solve challenging issues.
+  In my previous experience, I collaborated with my team and participated in phases of the software development life cycle, including requirements gathering, development, testing, and part of the deployment process to build an agency dashboard system to permit agencies to manage their agents and clients and keep track of their financial services offered such as tax return and assessment.
+  I am an effective communicator and collaborator, and I have worked seamlessly with cross-functional teams to achieve project goals.
+  I currently work as a Software Developer at Jarvis, where I'm tasked with building and testing applications with technologies such as Java, Linux and Docker. In my spare time, I enjoy reading mystery/thriller novels and learning new things, which has allowed me to stay up-to-date with the latest technological advancements. I believe my passion for software development and my experience make me a good fit for any team.
+  I am looking to challenge myself and am interested in positions where I can implement my creativity to solve problems.
 # Group your skills by level.
 # Your skills can be anything software related (e.g. language, frameworks, methodologies, software, etc.).
 skills:
@@ -28,21 +28,21 @@ skills:
 
   # At least 5 skills
   competent:
-    - NodeJs
-    - ExpressJs
+    - Node+Express
     - JavaScript
     - React
     - Docker
-    - Linux
     - Bootstrap
+    - MongoDB
   # At least 5 skills
   familiar:
-    - TypeScript
     - SCSS
-    - Mobile App Development(Android and iOS)
+    - Android Application Development
     - C#
+    - Firebase
     - Swift
-    - Springboot framework
+    - Spring Boot
+    - GCP
 
 # List of Jarvis projects
 jarvis_projects:
@@ -50,38 +50,37 @@ jarvis_projects:
     git_url: "/linux_sql"
     # The project description allows hiring managers to understand your project and technologies you used(e.g. programming languages, libraries, algorithms, hardware, tools, etc.).
     # The project description must start with an action verb (https://bit.ly/3guO98u)
-    description: Developed a Linux monitoring agent to gather a server hardware specifications and resource usage data and store the data in a database. Designed the application to permit an Administrator to have a knowledge of a Linux server hardware and keep track of ongoing Linux server resource usage data. Utilized bash scripts which is executed continuously with crontab command to collect usage data and store the data in the PostgreSQL instance in the docker container.
+    description: Developed a Linux monitoring agent to gather a server hardware specifications and resource usage data and store the data in a database. Designed the application to permit an Administrator to have a knowledge of a Linux server hardware and keep track of ongoing Linux server resource usage data. Utilized bash scripts which is executed continuously with Crontab to collect usage data and store the data in the PostgreSQL instance in the docker container.
 
   - name: "Database Manipulation"
     git_url: "/sql"
     # The project description allows hiring managers to understand your project and technologies you used(e.g. programming languages, libraries, algorithms, hardware, tools, etc.).
     # The project description must start with an action verb (https://bit.ly/3guO98u)
-    description: To have an in-depth understanding of relational databases, RDMS, SQL, ERD, Data models and optimizations, I familiarized myself with these concepts in SQL with hands-on work on a dataset.
+    description: To have an in-depth understanding of relational databases, RDMS, SQL, Data models and optimizations, I familiarized myself with hands-on work on a dataset.
      Implemented DBeaver as the SQL client to perform several DDL and DML operations.
      Used several technologies such as Docker to manage the PSQL instance, PostgreSQL database to store the data, and Git & GitHub to manage and track source code.
 
   - name: "Core Java Apps"
     git_url: "/core_java"
     description:
-      - "Twitter App: Curabitur laoreet tristique leo, eget suscipit nisi. Sed in sodales ex. Maecenas vitae tincidunt dui, et eleifend quam."
-      - "JDBC App: Developed a JDBC application that connects Java to a PostgreSQL RDBMS database. Implemented DAO design pattern to permit the Data Access Objects to implement the methods to perform CRUD
-        operations on the database running on a docker container. Utilized Maven to manage the application packages and dependencies."
+      #- "Twitter App: Curabitur laoreet tristique leo, eget suscipit nisi. Sed in sodales ex. Maecenas vitae tincidunt dui, et eleifend quam."
+      - "JDBC App: Developed a JDBC application that connects Java to a PostgreSQL RDBMS database. Implemented DAO design pattern to perform CRUD operations on the database running on a docker container. Utilized Maven to manage the application packages and dependencies."
       - "Grep App: Curabitur laoreet tristique leo, eget suscipit nisi. Sed in sodales ex. Maecenas vitae tincidunt dui, et eleifend quam."
-  - name: "Springboot App"
-    git_url: "/springboot"
-    description: ""
-  - name: "Python Data Analytics"
-    git_url: "/python_data_anlytics"
-    description: ""
-  - name: "Hadoop"
-    git_url: "/hadoop"
-    description: ""
-  - name: "Spark"
-    git_url: "/spark"
-    description: ""
-  - name: "Cloud/DevOps"
-    git_url: "/cloud_devops"
-    description: ""
+  #- name: "Springboot App"
+   # git_url: "/springboot"
+   # description: ""
+  #- name: "Python Data Analytics"
+   # git_url: "/python_data_anlytics"
+  #  description: ""
+  #- name: "Hadoop"
+  #  git_url: "/hadoop"
+  #  description: ""
+ # - name: "Spark"
+  #  git_url: "/spark"
+  #  description: ""
+  #- name: "Cloud/DevOps"
+  #  git_url: "/cloud_devops"
+  #  description: ""
 
 # List of personal or academic projects
 # Feel free to add more projects
@@ -92,20 +91,20 @@ highlighted_projects:
     git_url: "https://github.com/Oreoluwatemi/Bitcoin-Testnet-Transactions-App"
     # The project description must start with an action verb (https://bit.ly/3guO98u)
     description: Developed an application by which users can send some currency 
-     (testnet bitcoin) from one wallet to another via a frontend interface. Utilized BlockCypher API for payment 
+     from one wallet to another via a frontend interface. Utilized BlockCypher API for payment 
       processing, wallet details and querying the blockchain for pending transactions. Applied Sass and Bootstrap to make the 
-      application responsive. Implemented QRCode to display user wallet address for easy transactions.
+      application responsive. The application was tested with Testnet Bitcoin.
 
   - name: "Falcon Restaurant Web Application"
     git_url:
-    description: Worked with a team to develop a full stack restaurant application for Falcon restaurant which displays all the restaurant services, it permits for users to view menus, reserve a seat and contact the restaurant. Users can login to place an order and view previous orders, while admin can view and manage all orders, reservations and menus available. 
+    description: Worked with a team to develop a full stack application for a restaurant. The application permits users to view menus, reserve a seat and contact the restaurant. Users can login to place an order and view previous orders, while admin can view and manage all orders, reservations and menus available. 
      Designed and developed the responsive web application using HTML5, CSS and JavaScript/NodeJS, ReactJS and MongoDB. Developed the frontend features such as reservation page, menu, orders, contact us along with backend features to develop REST API. Worked with Git to push, track and commit code changes to remote repositories.
 
 
   - name: "Flight Management Web Application"
     git_url: "https://github.com/Oreoluwatemi/FlightManagement"
     description: Developed an application using Spring Boot Framework. The website enables users to view available flights by the location and date searched, users can also book a flight. An admin feature is developed to manage flights available, view booked flights and customers.
-      The application was built using Java and implemented spring security with Thymeleaf, HTML5 and CSS for the frontend development.
+      The application was built using Java and implemented Spring Security with Thymeleaf, HTML5 and CSS for the frontend development.
       Implemented Swagger to provide a visual display of the API documentation.
 
   - name: "Tiffin Mobile App"
@@ -122,7 +121,8 @@ professional_experience:
     company: "Jarvis"
     duration: "2023-present"
     # The project description must start with an action verb (https://bit.ly/3guO98u)
-    description: "Collaborated with agile/scrum team to work on several projects with technologies such as Java, Linux, Docker. Participated in
+    description: "Built and tested several applications with technologies such as Java, Linux, and Docker. 
+    Collaborated with team members using Agile methodology. Utilized Git and Git Flow for every project. Participated in
     daily scrum meetings and master code reviews with senior developers."
   - title: "Full Stack Developer"
     company: "PersonalBanker Canada"
@@ -134,7 +134,7 @@ professional_experience:
 	Developed and maintained 10+ REST APIs, writing documentation according to specified requirements."
 #List of edcuation
 education: 
-  - school_name: "Covenant university"
+  - school_name: "Covenant University"
     duration: "2014-2019"
     degree: "Bachelor of Engineering"
     department: "Petroleum Engineering"
@@ -156,4 +156,6 @@ others:
     #category
   - title: "Activities/Hobbies"
     bullets:
+      - "Travelling and Exploring"
+      - "Reading Books: I enjoy Ted Dekker novels."
       - "Volunteer, Salvation Army: Assists in feeding community members weekly."
